# gdolib

./: CMakeLists.txt  README.md  gdo.c  gdo_priv.h  gdo_utils.c  idf_component.yml
examples/: CMakeLists.txt
examples/main/: main.c
include/: gdo.h
