idf_component_register(SRCS
                            "gdo.c"
                            "gdo_utils.c"
                            "secplus.c"
                       INCLUDE_DIRS
                            "include"
                       REQUIRES
                            driver
                            esp_timer
)
